# temporian

./: .bazelrc  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  WORKSPACE  bazel-temporian_achoum  mkdocs.yml  publish-linux.yaml  pyproject.toml  requirements.txt  sales.csv  test.py
.git-hooks/: pre-commit
.github/workflows/: coverage.yaml  formatting.yaml  publish-linux.yaml  publish-macos.yaml  publish.yaml  test.yaml  test_notebooks.yaml  windows_wheels.yaml
.venv311/: pyvenv.cfg
benchmark/: BUILD  basic.py  benchmark_time.py  memory.sh  mprof.sh  profile_memory.sh  profile_time.sh  scalene.sh  time.sh
benchmark/scripts/: BUILD  add_index.py  basic.py  sma.py
benchmarks/: BUILD  complete.py  run.py  run.sh
config/: BUILD  MANIFEST.in  build.py  move_generated_files.sh  setup.py
docs/: .readthedocs.yaml  BUILD  build_and_install.md  code_examples_test.py  docstring_guidelines.md  gen_contributing.py  gen_index.py  gen_ref_pages.py  getting_started.md  index.md  markdown_code_examples_test.py  mkdocs.yml  public_api_test.py  requirements.txt
docs/src/: 3_minutes.md  changelog.md  getting_started.ipynb  getting_started.md  quick_start.md  user_guide.ipynb  user_guide.md  user_guide.py
docs/src/css/: custom.css
docs/src/recipes/: aggregate_by_time.ipynb  aggregate_calendar.ipynb  aggregate_duplicated.ipynb  aggregate_index.ipynb  aggregate_interval.ipynb  index.md  split_fraction.ipynb  split_timestamp.ipynb
docs/src/reference/: index.md
docs/src/tutorials/: anomaly_detection-unsupervised.ipynb  anomaly_detection.ipynb  anomaly_detection_supervised.ipynb  anomaly_detection_unsupervised.ipynb  bank_fraud_detection_with_tfdf.ipynb  deleteme.html  display_test.ipynb  getting_started.ipynb  heart_rate_analysis.ipynb  index.md  loan_outcomes_prediction.ipynb  m5_competition.ipynb  m5_competition.py  repr_test_deleteme.ipynb  requirements.txt  server_machine_dataset.ipynb  taxi_anomaly_detection.ipynb  temporian_with_beam.ipynb  test.ipynb  toy_example.ipynb  tutorial_scipy2024_part1.ipynb  tutorial_scipy2024_part2.ipynb  tutorial_scipy2024_part3.ipynb  tutorial_scipy2024_part4.ipynb  with_tensorflow_decision_forests.ipynb
example/: BUILD  financial_db.ipynb  financial_db.py  m5_competition.py  notebook.ipynb  toy_example.ipynb  vital_signs.ipynb
example/.ipynb_checkpoints/: Playing with notebook-checkpoint.ipynb  notebook-checkpoint.ipynb
examples/: BUILD  financial.ipynb  toy.ipynb  tutorials  vital_signs.ipynb
my_examples/: play.ipynb
temporal_feature_processor/: BUILD  __init__.py  core.proto  core.py  evaluator.py  event.py  feature.py  interval.py  operator.py  processor.py  sampling.py  temporal_feature_processor_test.py
temporal_feature_processor/core/: BUILD  backends.py  core.py  evaluator.py  operator_lib.py  processor.py
temporal_feature_processor/core/data/: event.py  feature.py  sampling.py
temporal_feature_processor/core/operators/: BUILD  __init__.py  assign.py  base.py  place_holder.py  simple_moving_average.py
temporal_feature_processor/core/test/: BUILD  operator_test.py  processor_test.py  prototype_test.py
temporal_feature_processor/data/: BUILD  dtype.py  event.py  feature.py
temporal_feature_processor/implementation/: BUILD
temporal_feature_processor/implementation/pandas/: BUILD  evaluator.py  sampling.py
temporal_feature_processor/operators/: BUILD  __init__.py  assign.py  base.py  place_holder.py  simple_moving_average.py
temporal_feature_processor/operators/window/: __init__.py  base.py  simple_moving_average.py
temporal_feature_processor/proto/: BUILD  core.proto
temporal_feature_processor/sampling/: __init__.py  base.py  sampling.py  uniform_sampling.py
temporal_feature_processor/sequences/: __init__.py  event.py  feature.py
temporal_feature_processor/test/: BUILD  api_test.py  prototype_test.py
temporal_feature_processor/utils/: BUILD
temporian/: BUILD  __init__.py  help.py
temporian/api/: BUILD  duration.py
temporian/beam/: BUILD  __init__.py  csv.py  evaluation.py  implementation_lib.py  io.py  typing.py
temporian/beam/io/: BUILD  csv.py  dict.py  np_array_coder.py  tensorflow.py
temporian/beam/operators/: BUILD  __init__.py  add_index.py  base.py  cast.py  drop_index.py  filter.py  filter_empty_index.py  filter_moving_count.py  glue.py  lag.py  leak.py  prefix.py  propagate.py  rename.py  resample.py  select.py  timestamps.py  unique_timestamps.py
temporian/beam/test/: BUILD  csv_test.py  evaluation_test.py  io_test.py  utils.py
temporian/cli/: BUILD  main.py  view.py  view_test.py
temporian/core/: BUILD  backends.py  compilation.py  core.py  dataclasses.py  decorators.py  evaluation.py  evaluator.py  event_set_ops.py  graph.py  mixins.py  operator_lib.py  processor.py  schedule.py  serialization.py  serialize.py  types.py  typing.py
temporian/core/data/: BUILD  dtype.py  duration.py  duration_utils.py  event.py  feature.py  node.py  sampling.py  schema.py
temporian/core/operators/: BUILD  __init__.py  (+55 more)
temporian/implementation/: BUILD
temporian/io/: BUILD  __init__.py  api_symbols.py  csv.py  format.py  numpy.py  pandas.py  parquet.py  polars.py  read_event.py  read_event_set.py  save_event.py  save_event_set.py  tensorflow.py
temporian/proto/: BUILD  core.proto  core_pb2.py
temporian/test/: BUILD  api_beam_test.py  api_test.py  doc_test.py  docstring_test.py  event_conversion_test.py  io_test.py  prototype_test.py  prototype_test_numpy.py  public_api_test.py  public_symbols_test.py  user_guide_test.py  utils.py
temporian/utils/: BUILD  compile.bzl  config.py  golden.py  rtcheck.py  string.py  typecheck.py
tools/: BUILD  RELEASE.md  assemble_pip_files.py  build.bat  build.md  build_and_install.md  build_cleaner.py  build_cleaner_test.py  build_manylinux.sh  build_manylinux_all.sh  check_install.py  coverage.sh  create_operator.py  docstring_guidelines.md  run_notebooks.sh  start_compile_docker.sh  start_notebook.sh  start_notebook_instance.sh  test_install.py  test_notebooks.sh
tools/test/: BUILD  check_install_test.py
(+768 files in other folders)
