[tool.poetry]
name = "temporian"
version = "0.1.0"
description = ""
authors = [
    "Guillermo Etchebarne <getchebarne@tryolabs.com>",
    "Ian Spektor <ispektor@tryolabs.com>",
    "Mathieu Guillame-Bert <gbm@google.com>",
    "Richard Stotz <richardstotz@google.com>"
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
absl-py = "^1.3.0"
protobuf = "^4.21.12"
pandas = "^1.5.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
toml = "^0.10.2"
pylint = "^2.15.10"
memory-profiler = "^0.61.0"
scalene = "^1.5.20"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.1.5"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
ipykernel = "^6.22.0"

[tool.black]
line-length = 80
preview = true

[tool.pylint]
max-line-length = 80
disable = [
    "redefined-builtin",
]

[tool.pyright]
include = ["temporian"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
